--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4bfa1">  <td>20/06/29 21:05:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@163e4e87]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1336735375</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/06/29 21:05:37</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@163e4e87]">doUserReg</td> 
-  <td>main@1336735375</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/06/29 21:05:37</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@163e4e87]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1336735375</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/06/29 21:05:37</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@163e4e87]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1336735375</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/06/29 21:05:37</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@163e4e87]">doLogin</td> 
-  <td>main@1336735375</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/06/29 21:05:37</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@163e4e87]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1336735375</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@769e7ee8]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@769e7ee8]">doUserReg</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>70</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@769e7ee8]">doLogin</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>77</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/06/29 21:13:53</td>   <td>79</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@769e7ee8]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
 </table>
