--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4bfa1">  <td>20/07/01 18:30:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@4445629]">doLogin</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/07/01 18:30:56</td>   <td>-40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@4445629]">doUserReg</td> 
-  <td>main@1353070773</td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/07/01 18:30:56</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@4445629]">fourthTest</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="f4bfa1">  <td>20/07/01 18:30:56</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@4445629]">thirdTest</td> 
-  <td>main@1353070773</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>15</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@769e7ee8]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>-69</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@769e7ee8]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@769e7ee8]">doLogin</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@769e7ee8]">doUserReg</td> 
+  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
+<tr bgcolor="f4bfa1">  <td>20/07/02 11:59:29</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@769e7ee8]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@23211803</td>   <td></td> </tr>
 </table>
