--- a/test-output/index.html
+++ b/test-output/index.html
@@ -419,31 +419,31 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'validateTitles')
 data.setCell(0, 2, 'testcases.TestCase2')
-data.setCell(0, 3, 18);
+data.setCell(0, 3, 10);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'doUserReg')
 data.setCell(1, 2, 'testcases.TestCase1')
 data.setCell(1, 3, 8);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doLogin')
-data.setCell(2, 2, 'testcases.TestCase1')
-data.setCell(2, 3, 4);
+data.setCell(2, 1, 'doUserReg')
+data.setCell(2, 2, 'testcases.TestCase3')
+data.setCell(2, 3, 3);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'doLogin')
-data.setCell(3, 2, 'testcases.TestFailure')
-data.setCell(3, 3, 4);
+data.setCell(3, 2, 'testcases.TestCase1')
+data.setCell(3, 3, 2);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'fourthTest')
 data.setCell(4, 2, 'testcases.TestCase3')
-data.setCell(4, 3, 3);
+data.setCell(4, 3, 2);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'thirdTest')
 data.setCell(5, 2, 'testcases.TestCase3')
-data.setCell(5, 3, 3);
+data.setCell(5, 3, 2);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'doUserReg')
-data.setCell(6, 2, 'testcases.TestCase3')
-data.setCell(6, 3, 3);
+data.setCell(6, 1, 'doLogin')
+data.setCell(6, 2, 'testcases.TestFailure')
+data.setCell(6, 3, 2);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'doLogin')
 data.setCell(7, 2, 'testcases.TestCase3')
@@ -452,7 +452,7 @@ window.suiteTableData['Functional_Suite']= { tableData: data, tableDiv: 'times-d
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 43 ms</span>
+              <span class="suite-total-time">Total running time: 29 ms</span>
               <div id="times-div-Functional_Suite">
               </div> <!-- times-div-Functional_Suite -->
             </div> <!-- times-div -->
@@ -466,19 +466,19 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">validateTitles</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg">Screenshot Link</a></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">doUserReg</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg">Screenshot Link</a></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">doLogin</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg">Screenshot Link</a></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -506,19 +506,19 @@ return data;
               <div class="chronological-class-name">testcases.TestCase1</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">creatingDBConn</span>
-                <span class="method-start">25 ms</span>
+                <span class="method-start">22 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
-                <span class="method-start">55 ms</span>
+                <span class="method-start">53 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">doUserReg</span>
-                <span class="method-start">55 ms</span>
+                <span class="method-start">54 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">67 ms</span>
+                <span class="method-start">65 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
@@ -526,15 +526,15 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">doLogin</span>
-                <span class="method-start">71 ms</span>
+                <span class="method-start">70 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">79 ms</span>
+                <span class="method-start">76 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">closingDBConn</span>
-                <span class="method-start">80 ms</span>
+                <span class="method-start">77 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -543,7 +543,7 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">validateTitles</span>
-                <span class="method-start">334 ms</span>
+                <span class="method-start">190 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -552,15 +552,15 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">doUserReg</span>
-                <span class="method-start">393 ms</span>
+                <span class="method-start">240 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">thirdTest</span>
-                <span class="method-start">405 ms</span>
+                <span class="method-start">256 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">fourthTest</span>
-                <span class="method-start">410 ms</span>
+                <span class="method-start">260 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -569,11 +569,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">doLogin</span>
-                <span class="method-start">468 ms</span>
+                <span class="method-start">293 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">497 ms</span>
+                <span class="method-start">317 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
