9th commit - TestNG - TestNG Report

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -419,30 +419,30 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'validateTitles')
 data.setCell(0, 2, 'testcases.TestCase2')
-data.setCell(0, 3, 10);
+data.setCell(0, 3, 17);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'doUserReg')
-data.setCell(1, 2, 'testcases.TestCase1')
-data.setCell(1, 3, 8);
+data.setCell(1, 1, 'thirdTest')
+data.setCell(1, 2, 'testcases.TestCase3')
+data.setCell(1, 3, 14);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'doUserReg')
-data.setCell(2, 2, 'testcases.TestCase3')
-data.setCell(2, 3, 3);
+data.setCell(2, 2, 'testcases.TestCase1')
+data.setCell(2, 3, 7);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'doLogin')
-data.setCell(3, 2, 'testcases.TestCase1')
-data.setCell(3, 3, 2);
+data.setCell(3, 1, 'fourthTest')
+data.setCell(3, 2, 'testcases.TestCase3')
+data.setCell(3, 3, 5);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'fourthTest')
-data.setCell(4, 2, 'testcases.TestCase3')
-data.setCell(4, 3, 2);
+data.setCell(4, 1, 'doLogin')
+data.setCell(4, 2, 'testcases.TestFailure')
+data.setCell(4, 3, 5);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'thirdTest')
+data.setCell(5, 1, 'doUserReg')
 data.setCell(5, 2, 'testcases.TestCase3')
-data.setCell(5, 3, 2);
+data.setCell(5, 3, 4);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'doLogin')
-data.setCell(6, 2, 'testcases.TestFailure')
+data.setCell(6, 2, 'testcases.TestCase1')
 data.setCell(6, 3, 2);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'doLogin')
@@ -452,7 +452,7 @@ window.suiteTableData['Functional_Suite']= { tableData: data, tableDiv: 'times-d
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 ms</span>
+              <span class="suite-total-time">Total running time: 54 ms</span>
               <div id="times-div-Functional_Suite">
               </div> <!-- times-div-Functional_Suite -->
             </div> <!-- times-div -->
@@ -467,18 +467,24 @@ return data;
               <span class="reporter-method-name">validateTitles</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
+                <span class="reporter-method-output"><br></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">doUserReg</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
+                <span class="reporter-method-output"><br></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">doLogin</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></span>
+                <span class="reporter-method-output"><br></span>
+                <span class="reporter-method-output"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -506,35 +512,35 @@ return data;
               <div class="chronological-class-name">testcases.TestCase1</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">creatingDBConn</span>
-                <span class="method-start">22 ms</span>
+                <span class="method-start">20 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
-                <span class="method-start">53 ms</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">doUserReg</span>
-                <span class="method-start">54 ms</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">65 ms</span>
+                <span class="method-start">58 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
-                <span class="method-start">70 ms</span>
+                <span class="method-start">62 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">doLogin</span>
-                <span class="method-start">70 ms</span>
+                <span class="method-start">62 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">76 ms</span>
+                <span class="method-start">67 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">closingDBConn</span>
-                <span class="method-start">77 ms</span>
+                <span class="method-start">68 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -543,7 +549,7 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">validateTitles</span>
-                <span class="method-start">190 ms</span>
+                <span class="method-start">277 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -552,15 +558,15 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">doUserReg</span>
-                <span class="method-start">240 ms</span>
+                <span class="method-start">376 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">thirdTest</span>
-                <span class="method-start">256 ms</span>
+                <span class="method-start">391 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">fourthTest</span>
-                <span class="method-start">260 ms</span>
+                <span class="method-start">415 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -569,11 +575,11 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">doLogin</span>
-                <span class="method-start">293 ms</span>
+                <span class="method-start">457 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">317 ms</span>
+                <span class="method-start">518 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
