--- a/test-output/old/Functional Suite/reporter-output.html
+++ b/test-output/old/Functional Suite/reporter-output.html
@@ -1,4 +1,10 @@
 <h2>Reporter output</h2><table><tr><td><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></td></tr>
 <tr><td><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></td></tr>
 <tr><td><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></td></tr>
 </table>
